# mini-ex

./: .dockerignore  .env  .gitignore  AI_USAGE.md  CAUHOI.md  Cargo.toml  Dockerfile  Dockerfile.migrate  README.md  _typos.toml  docker-compose.yml  jwt-auth-implementation-guide.html  package.json  pnpm-lock.yaml  prisma.market.config.ts  prisma.portfolio.config.ts
_mini-ex-front-end/: index.html
crates/database/: Cargo.toml
crates/database/prisma/: create-databases.sql  market.prisma  market.sql  portfolio.prisma  portfolio.sql  schema.prisma
crates/database/src/: enums.rs  enums_parse.rs  lib.rs
crates/database/src/entities/: asset_balances.rs  assets.rs  mod.rs  orders.rs  users.rs
crates/database/src/models/: assets.rs
crates/database/src/repositories/: asset_balances.rs  assets.rs  mod.rs  orders.rs  users.rs
crates/database/tests/: orders_idempotency.rs
crates/http-server/: Cargo.toml
crates/http-server/docs/: openapi.yml
crates/http-server/src/: exception.rs  main.rs
crates/http-server/src/extractors/: validator.rs
crates/http-server/src/handlers/: mod.rs
crates/http-server/src/handlers/auth/: sign_in.rs  sign_out.rs  sign_up.rs
crates/http-server/src/handlers/users/: me.rs
crates/http-server/src/handlers/ws/: mod.rs  random_u64.rs
crates/market-service/: Cargo.toml
crates/market-service/docs/: openapi.yml  scalar.html  swagger.html
crates/market-service/src/: exception.rs  main.rs
crates/market-service/src/coingecko/: fetch_assets.rs  mod.rs  sync_assets.rs
crates/market-service/src/extractors/: state.rs
crates/market-service/src/handlers/market/: mod.rs  price.rs  prices.rs  symbols.rs
crates/portfolio-service/: Cargo.toml
crates/portfolio-service/docs/: openapi.yml  scalar.html  swagger.html
crates/portfolio-service/src/: exception.rs  main.rs
crates/portfolio-service/src/common/: jwt.rs  market_client.rs  mod.rs
crates/portfolio-service/src/extractors/: auth.rs  state.rs
crates/portfolio-service/src/handlers/: mod.rs
crates/portfolio-service/src/handlers/auth/: mod.rs  sign_in.rs
crates/portfolio-service/src/handlers/funds/: deposit.rs  mod.rs
crates/portfolio-service/src/handlers/orders/: create.rs  get.rs  list.rs  mod.rs
crates/portfolio-service/src/handlers/orders/execution/: buy.rs  mod.rs  sell.rs
crates/portfolio-service/src/handlers/portfolio/: get.rs  mod.rs
crates/portfolio-service/src/handlers/users/: me.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: env.rs  lib.rs  result.rs  tracing.rs  util.rs
