[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.dependencies]
# tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1" }

# runtime
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
] }
futures-util = { version = "0.3" }

# error handling
thiserror = { version = "2" }

# database and orm
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "sea-orm-internal",
    "with-bigdecimal",
] }

# env 
dotenv = { version = "0.15" }

# http server
axum = { version = "0.8", features = ["macros"] }
axum-macros = { version = "0.5" }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors"] }
tower = { version = "0.5" }

# serialize and deserialize
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# validator
validator = { version = "0.20", features = ["derive"] }

# jwt
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# websocket
fastwebsockets = { version = "0.10", features = ["with_axum", "upgrade"] }

# rand
rand = { version = "0.10" }

# http client
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = { version = "0.1" }
url = { version = "2" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# bytes
bytes = { version = "1" }

# tls
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
webpki-roots = { version = "1" }

# encoding
bs58 = { version = "0.5" }
base64 = { version = "0.22" }

# evm
alloy = { version = "2" }

# enums util
strum = { version = "0.28", features = ["derive"] }

# cryptographic
sha2 = { version = "0.11.0" }
argon2 = { version = "0.5.3" }

# time 
chrono = { version = "0.4.45" }
