[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

shared = { path = "../shared" }

[dev-dependencies]
tokio = { workspace = true }
dotenv = { workspace = true }
