[package]
name = "market-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

database = { path = "../database" }
shared = { path = "../shared" }
