[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
